Now loads data from data.json

--- a/src/components/thrall-details/ThrallDetails.css
+++ b/src/components/thrall-details/ThrallDetails.css
@@ -42,11 +42,24 @@
     font-size: 16pt;
 }
 
-.thrall-location-list {
+.thrall-location-list-container {
     margin-top: 16px;
     font-size: 12pt;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+}
+
+.thrall-location-list-header {
+    font-size: 14pt;
+}
+
+.thrall-location-list-subheader {
+    font-size: 12pt;
+    margin-bottom: 8px;
+}
+
+.thrall-location-description {
+    margin-top: 16px;
 }
 
 .thrall-wars-thrall-details .header:hover {
