Animation changed. Componen structure changed. Icon added

--- a/src/components/thrall-details/ThrallDetails.css
+++ b/src/components/thrall-details/ThrallDetails.css
@@ -1,45 +1,34 @@
 
 .thrall-details-container {
     position: absolute;
-    width: var(--sidebar-width);
-    right: -400px;
+    width: calc(var(--sidebar-width) - 16px);
+    right: calc(-400px + 32px);
 }
 
 .thrall-details-sliding-in {
-    right: -400px;
+    right: calc(-400px + 32px);
     animation: thrall-details-slide-in var(--sidebar-slide-anim-duration) both;
 }
 
 .thrall-details-sliding-out {
-    right: 0px;
+    right: 16px;
     animation: thrall-details-slide-out var(--sidebar-slide-anim-duration) both;
 }
 
 @keyframes thrall-details-slide-in {
     100% {
-        right: 0px;
+        right: 16px;
     }
 }
 
 @keyframes thrall-details-slide-out {
     100% {
-        right: -400px;
+        right: calc(-400px);
     }
 }
 
-
-.thrall-wars-thrall-details {
-    margin-left: 16px;
-    margin-top: 8px;
-    margin-bottom: 8px;
-    display: flex;
-    flex-direction: column;
-    color: #cec7af;
-    right: 400px;
-}
-
-.thrall-wars-thrall-details .thrall-name {
-    font-size: 16pt;
+.thrall-details {
+    color: var(--primary-sidebar-color)
 }
 
 .thrall-location-list-container {
@@ -60,13 +49,4 @@
 
 .thrall-location-description {
     margin-top: 16px;
-}
-
-.thrall-wars-thrall-details .header:hover {
-    color: #eee9d8;
-    cursor: pointer;
-}
-
-.thrall-wars-thrall-details .thrall-type {
-    font-size: 10pt;
 }
