--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 :root {
     --sidebar-width: 400px;
     --sidebar-slide-anim-duration: 0.4s;
+    --primary-sidebar-color: #cec7af;
 }
 
 body {
@@ -16,15 +17,14 @@ body {
 .sidebar-right {
     background-color: #292829;
     width: 400px;
+    padding-top: 8px;
+    padding-left: 16px;
+    padding-right: 16px;
 }
 
-.thrall-wars-thrall {
-    margin-left: 16px;
-    margin-top: 8px;
-    margin-bottom: 8px;
-    display: flex;
-    flex-direction: column;
-    color: #cec7af;
+.thrall-wars-thrall:hover {
+    color: #eee9d8;
+    cursor: pointer;
 }
 
 .thrall-wars-thrall .thrall-name {
@@ -35,10 +35,6 @@ body {
     font-size: 10pt;
 }
 
-.thrall-wars-thrall:hover {
-    color: #eee9d8;
-    cursor: pointer;
-}
 
 body {
     margin: 0;
