Added styles for controls. Added info button (non functional)

--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -2,6 +2,7 @@
     --sidebar-width: 400px;
     --sidebar-slide-anim-duration: 0.4s;
     --primary-sidebar-color: #cec7af;
+    --primary-sidebar-color-disabled: #807a70;
     --primary-sidebar-color-highlight: #eee9d8;
     --background-color: #292829;
     --background-color-lighter: #565356;
