Added info component

--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,7 @@ body {
     color: var(--background-color-lighter);
     cursor: pointer;
 }
+
+a:visited {
+    color: var(--primary-sidebar-color-highlight);
+}
