--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,19 @@ body {
     color: var(--primary-sidebar-color);
 }
 
+#settings-button {
+    position: absolute;
+    border-radius: 2px;
+    z-index: 800;
+    left: 10px;
+    top: 103px;
+    width: 30px;
+    height: 30px;
+    border-top: 1px solid var(--primary-sidebar-color);
+    background-color: var(--background-color);
+    color: var(--primary-sidebar-color);
+}
+
 #hq-checkbox-wrapper {
     position: absolute;
     z-index: 800;
@@ -82,6 +95,11 @@ body {
 }
 
 #info-button:hover {
+    color: var(--background-color-lighter);
+    cursor: pointer;
+}
+
+#settings-button:hover {
     color: var(--background-color-lighter);
     cursor: pointer;
 }
