--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,11 @@ body {
     flex-direction: row;
 }
 
+.display-in-column {
+    display: flex;
+    flex-direction: column;
+}
+
 .display-in-center {
     display: flex;
     align-content: center;
