Added a rudimentary item search

--- a/src/index.css
+++ b/src/index.css
@@ -129,3 +129,10 @@ a:visited {
     padding-right: 8px;
     border-radius: 2px;
 }
+
+#item-search {
+    position: absolute;
+    z-index: 800;
+    left: 44px;
+    top: 10px;
+}
