added 3 Gabriela locations. Added highlight on hover

--- a/src/components/thrall-details/thrall-details-locations/ThrallDetailsLocations.css
+++ b/src/components/thrall-details/thrall-details-locations/ThrallDetailsLocations.css
@@ -13,6 +13,10 @@
     color: var(--primary-sidebar-color-highlight);
 }
 
+.thrall-details-single-location__highlight {
+    color: var(--primary-sidebar-color-highlight);
+}
+
 .thrall-location-list-container {
     margin-top: 16px;
     font-size: 12pt;
